docs(provcity): add swagger documentation for province and city api
